fixed position for project elements on mobile

--- a/projectStyle.css
+++ b/projectStyle.css
@@ -84,7 +84,7 @@
     }
 
     .projectEle:nth-child(2) {
-        margin-top: 10em;
+        margin-top: 30em;
     }
 }
 
